# m17_simulator

./: CMakeLists.txt  README.md  m17_tx_simulator.c
codec2/src/: codebooknewamp2.c  codebooknewamp2_energy.c  codec2.c  filter.h  newamp1.h  newamp2.h  output.txt
crypt2/: README.md  demo.c
crypt2/include/: crypt2.h
crypt2/src/: aes.c  rand.c
fec2/: README.md
fec2/include/: fec2.h
fec2/src/: convolutional.c  crc16.c  golay.c  interleaver.c  pmatrix.c  viterbi.c
